Changes in version 0.97

- Completely rewrote header handling, improving its handling of headers
  split across multiple lines among other things.

- Added support for omitting parts of the copied headers.

- Internal MIME headers are now stripped from multipart messages.

- Added support for limiting the number of lines copied from the
  original message body.

- Added an option to control the generation of the In-Reply-To: header.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.96.2

- Fixed up the multi-line strings that no longer compile with recent
  compilers.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.96.1

- Added missing MySQL schema to package.

- Switched to new bglibs (1.006) library usage.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.96

- Added code to use MySQL instead of files for all the autoresponse
  data.

- Removed the option to omit the "To:" header, to allow for copying the
  response to extra addresses by adding BCCs to the message.

- Switched to using external bglibs.

- Removed adding the Delivered-To: line to outgoing messages.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.95

- Made the "MESSAGE-FILE" parameter optional, defaulting to
  "message.txt" in the autoresponder directory.

- Added a patch from Erik Sjoelund <erik@xpedio.com> to insert the